--- a/IncomeExpenseControl.WinForm/ReportRevenue_TotalRevenues_Form.resx
+++ b/IncomeExpenseControl.WinForm/ReportRevenue_TotalRevenues_Form.resx
@@ -217,4 +217,26 @@
         rkJggg==
 </value>
   </data>
+  <data name="btnFillter.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAOpSURBVHhe7ZrpTxNBFMD9WwVPPKJ+MRqNdzRRjIlXghK/
+        qAke8fpgNCYCCsohaukFpaWUG9pCWyktbcd5u7ObPR4mu52ZVjov+SXd2d3pzK87b2dnu2t3b4C0MBUl
+        AClsJeQKaKOc+BYxOTIQIkcHwrYy7DyByBVw4EuQWCOUzZPIWoFt6bGvfxw9VxBKgBKAFAoDOjeysm7y
+        anqJvKZYy/b07SABnb8TZKZQNOmOzNq2P8+nSd9CxlbWHbUfc53WgdXNCbEC7odm2IWtx7P4AvukBzYE
+        nscX2Sc97gaTaN2cUAKECrhHBVRrNZOeqQXb9ngmTyUUbGU9VIB1+/b/LMDJXprgIOkZPIikyEOaF6xl
+        7TspCTpR8wAloMUFwPjuDCRMLvyI0Sw/Qx7H5k3akfMEIlcARktdARhKQKsLeELH/ae5tMmOngfs7w+S
+        9dKWyfDyGnqcROQKwG6D2HESUQKkD4HVYtlkcCmLHicRsQIu0okOLHgYCF7c8EP9AuCyfpNcIm+TyzbO
+        j8Zc6wFPacY/NTThOtYrsJQGT5ZYezzC5wqAX9cZj6KzqIBbgWm25T/ep1bQdviAj4DDX0MkX66w5ukh
+        SkB6s6xddVg7fMAvB8DChjVAQAcVc2Zk0gTeBNUrIJ7baE4BgHVaG8zkycfZVRdjqzl2hP/4lc5pr9mw
+        NniEr4DTwxNkq1ZjzeQbm5UquRNMklK1qm13hVNoGzzCVwDwjmZpEQELqlD/y4S+ajyd33B9tw/4C4DJ
+        znKxpDWSV6QKRfMh6dhgmJUSLfk6v98j/AUANznc6oyAAXV5bMpWf668pe2DuYa13AdiBADDK+taI+uN
+        3vmMq+4Nmg8gztI7i3OfR8QJOE4v1SJrqN+AX/qQ4zKHRAtRockWhpt1nw/ECQBgsaOegBcnzjqNWWeA
+        3mad+3wgVgAkLsjWfiKSLbjq66JCjLj6M+7a7wOxAgB4IvQzM7hiSXwnh6Laq3Sjng90QmX9jjoQLwCA
+        tT6vAZ2Feb+R8Y2AznOaBQJyBHTQuftayd6R7QI6Pfdnk23pAW+J4U3yNT6XvRU5AgDnk+F2cYMtmsCE
+        5xIdPudGJ3k+/DiRJwBI5ousm3iEkcQnGLkCYBH0XwF/ksLOE4gSoAQghcJQApQAJYB1FQ8lQAlQAtDz
+        BKIENJWA7/L/MdIcAuC94ovEIjko7qlvOxoroIEdN2iMgCbouIFcATDGm6TjBnIFtCFlDUaugCZECWhx
+        AYHKX3f9yFMyIsMjAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
